--- a/packages/demo/index.scss
+++ b/packages/demo/index.scss
@@ -1,17 +1,43 @@
-.demo-container {
-  width: 80%;
+body,
+html,
+#root {
   height: 100%;
-  margin: auto;
+}
+.pivot-design-docs {
+  padding: 20px;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  .demo-item {
-    background-color: bisque;
-    border: 1px solid rgba(0, 0, 0, 0.056);
-    padding: 0.2rem 0;
-    width: 100%;
-    text-align: center;
-    cursor: pointer;
+  flex-direction: row;
+  background-color: #f7f9fb;
+  height: 100%;
+  .demo-container {
+    width: 10%;
+    height: 100%;
+    padding: 12px 0;
+    padding-right: 20px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    .demo-item {
+      // background-color: bisque;
+      border: 1px solid rgba(0, 0, 0, 0.056);
+      padding: 0.2rem 0;
+      width: 100%;
+      text-align: center;
+      cursor: pointer;
+      &.active {
+        color: #1677ff;
+        font-weight: 500;
+        font-size: 18px;
+      }
+    }
+  }
+  .demo-component {
+    padding: 48px 48px 0;
+    background-color: #fff;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    box-shadow: 0 8px 24px #0000000d;
+    flex: 1;
   }
 }
 
