--- a/packages/demo/index.scss
+++ b/packages/demo/index.scss
@@ -57,6 +57,13 @@ html,
   color: #000;
   font-size: 18px;
 }
+.demo-list-item {
+  width: 100%;
+  color: #fff;
+  background-color: #3685f5;
+  padding: 10px 4px;
+  border-radius: 4px;
+}
 
 .pivot-code-box {
   position: relative;
