--- a/packages/design/components/Card/index.scss
+++ b/packages/design/components/Card/index.scss
@@ -5,6 +5,42 @@
   padding: 10px, 8px, 10px, 12px;
   background-color: rgba(0, 0, 0, 0.04);
 
+  &.#{$prefix}-head {
+    display: flex;
+
+    width: 100%;
+    height: 33px;
+
+    &-title {
+      min-width: 26px;
+      height: 13px;
+      font-weight: 400;
+      font-size: 13px;
+      line-height: 13px;
+      text-align: left;
+      color: #000000;
+    }
+
+    &-extra {
+      padding: 5px, 8px, 5px, 5px;
+      font-size: 12px;
+      line-height: 18px;
+      text-align: right;
+
+    }
+
+    &-time {
+      margin-top: 3px;
+      width: 106px;
+      height: 17px;
+      font-size: 11px;
+      line-height: 17px;
+      text-align: left;
+      color: #cbcbcb;
+      vertical-align: center;
+    }
+  }
+
   &-middle {
     width: 375px;
     height: 224px;
@@ -44,43 +80,4 @@
 
 
 
-}
-
-
-
-
-.#{$prefix}-head {
-  display: flex;
-
-  width: 100%;
-  height: 33px;
-
-  &-title {
-    min-width: 26px;
-    height: 13px;
-    font-weight: 400;
-    font-size: 13px;
-    line-height: 13px;
-    text-align: left;
-    color: #000000;
-  }
-
-  &-extra {
-    padding: 5px, 8px, 5px, 5px;
-    font-size: 12px;
-    line-height: 18px;
-    text-align: right;
-
-  }
-
-  &-time {
-    margin-top: 3px;
-    width: 106px;
-    height: 17px;
-    font-size: 11px;
-    line-height: 17px;
-    text-align: left;
-    color: #cbcbcb;
-    vertical-align: center;
-  }
 }
