--- a/packages/design/components/Card/index.scss
+++ b/packages/design/components/Card/index.scss
@@ -2,12 +2,13 @@
 
 .#{$prefix}-card {
   display: flex;
+  flex-wrap:wrap;
+  align-content:flex-start;
   padding: 10px, 8px, 10px, 12px;
   background-color: rgba(0, 0, 0, 0.04);
-
-  &.#{$prefix}-head {
+  .#{$prefix}-head {
     display: flex;
-
+    
     width: 100%;
     height: 33px;
 
@@ -56,7 +57,9 @@
     height: 470px;
   }
 
-  &-body {
+  .#{$prefix}-card-body {
+    display: flex;
+    flex-wrap:wrap;
     width: 100%;
     font-size: 14px;
     line-height: 21px;
