--- a/packages/design/components/Card/index.scss
+++ b/packages/design/components/Card/index.scss
@@ -4,15 +4,17 @@
   display: flex;
   flex-wrap:wrap;
   align-content:flex-start;
-  padding: 10px, 8px, 10px, 12px;
   background-color: rgba(0, 0, 0, 0.04);
+  padding: 20px;
+  margin: 12px;
+ 
   .#{$prefix}-head {
     display: flex;
     
     width: 100%;
     height: 33px;
 
-    &-title {
+    &.#{$prefix}-head-title {
       min-width: 26px;
       height: 13px;
       font-weight: 400;
@@ -40,11 +42,14 @@
       vertical-align: center;
     }
   }
+  &-border{
+     border: 1px solid #cbcbcb;
 
+  }
   &-middle {
     width: 375px;
     height: 224px;
-    padding: 15px, 22px, 10px, 22px;
+    padding: 20px;
   }
 
   &-small {
@@ -57,7 +62,7 @@
     height: 470px;
   }
 
-  .#{$prefix}-card-body {
+  &.#{$prefix}-card-body {
     display: flex;
     flex-wrap:wrap;
     width: 100%;
@@ -67,9 +72,15 @@
     text-align: left;
     vertical-align: top;
     margin-bottom: 3px;
+    &.#{$prefix}-card-body-text {
+      display: -webkit-box;
+      -webkit-line-clamp: 3;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+    }
   }
 
-  &-actions {
+  &.#{$prefix}-card-actions {
     width: 100%;
     height: 29px;
     font-size: 11px;
