--- a/packages/design/components/Card/index.scss
+++ b/packages/design/components/Card/index.scss
@@ -62,7 +62,8 @@
     height: 470px;
   }
 
-  &.#{$prefix}-card-body {
+  .#{$prefix}-card-body {
+    padding-top:5px ;
     display: flex;
     flex-wrap:wrap;
     width: 100%;
@@ -72,12 +73,56 @@
     text-align: left;
     vertical-align: top;
     margin-bottom: 3px;
-    &.#{$prefix}-card-body-text {
-      display: -webkit-box;
-      -webkit-line-clamp: 3;
-      -webkit-box-orient: vertical;
+    .#{$prefix}-card-body-text {
       overflow: hidden;
+  text-overflow: ellipsis;
+  text-align: justify;
+
+      //position: relative;
+      line-height: 1.5;
+      overflow: hidden;
+      max-height: 7.5em;
+      transition: .3s max-height;
     }
+    .#{$prefix}-card-body-btn {
+      position: absolute;
+      float: right;
+      clear: both;
+      margin-left: 20px;
+      font-size: 16px;
+      padding: 0 8px;
+      background: #3F51B5;
+      line-height: 24px;
+      border-radius: 4px;
+      color:  #fff;
+      cursor: pointer;
+      &:after{
+        content:'展开'
+      }
+      &:before{
+        content: '...';
+        position: absolute;
+        left: -5px;
+        color: #333;
+        transform: translateX(-100%)
+      }
+    }
+    .#{$prefix}-card-body-exp{
+      display: none;
+    }
+    .#{$prefix}-card-body-exp:checked+.#{$prefix}-card-body-text::after{
+      max-height: 100%;
+    }
+    .#{$prefix}-card-body-exp:checked+.#{$prefix}-card-body-btn::after .#{$prefix}-card-body-text::after{
+      visibility: hidden;
+    }
+    .#{$prefix}-card-body-exp:checked+.#{$prefix}-card-body-btn::before{
+      visibility: hidden;
+    }
+    .#{$prefix}-card-body-exp:checked+.#{$prefix}-card-body-btn::after{
+      content: '收起'
+    }
+    
   }
 
   &.#{$prefix}-card-actions {
