--- a/packages/design/components/Card/index.scss
+++ b/packages/design/components/Card/index.scss
@@ -73,20 +73,28 @@
     text-align: left;
     vertical-align: top;
     margin-bottom: 3px;
-    .#{$prefix}-card-body-text {
-      overflow: hidden;
-  text-overflow: ellipsis;
-  text-align: justify;
+   .#{$prefix}-card-body-content {
+     position: relative;
+     .#{$prefix}-card-body-text {
+       position: relative;
+        text-overflow: ellipsis;
+        text-align: justify;
+        display: -webkit-box;   
+       -webkit-line-clamp: 3;   
+        -webkit-box-orient: vertical;    
+        overflow: hidden;
 
       //position: relative;
       line-height: 1.5;
-      overflow: hidden;
-      max-height: 7.5em;
       transition: .3s max-height;
+  
     }
-    .#{$prefix}-card-body-btn {
+     .#{$prefix}-card-body-btn {
       position: absolute;
-      float: right;
+      right: 0px;
+      top: 60px;
+      //position: relative;
+     //float: right;
       clear: both;
       margin-left: 20px;
       font-size: 16px;
@@ -99,32 +107,32 @@
       &:after{
         content:'展开'
       }
-      &:before{
-        content: '...';
-        position: absolute;
-        left: -5px;
-        color: #333;
-        transform: translateX(-100%)
-      }
+     
     }
-    .#{$prefix}-card-body-exp{
+     .#{$prefix}-card-body-exp{
       display: none;
     }
-    .#{$prefix}-card-body-exp:checked+.#{$prefix}-card-body-text::after{
-      max-height: 100%;
+    .#{$prefix}-card-body-exp:checked+ .#{$prefix}-card-body-text{
+      -webkit-line-clamp:6;
     }
     .#{$prefix}-card-body-exp:checked+.#{$prefix}-card-body-btn::after .#{$prefix}-card-body-text::after{
       visibility: hidden;
     }
-    .#{$prefix}-card-body-exp:checked+.#{$prefix}-card-body-btn::before{
+     .#{$prefix}-card-body-exp:checked+ .#{$prefix}-card-body-btn::before{
       visibility: hidden;
     }
-    .#{$prefix}-card-body-exp:checked+.#{$prefix}-card-body-btn::after{
+    .#{$prefix}-card-body-exp:checked+ .#{$prefix}-card-body-text+.#{$prefix}-card-body-btn::after{
       content: '收起'
+     
     }
     
-  }
+    .#{$prefix}-card-body-exp:checked+ .#{$prefix}-card-body-text+.#{$prefix}-card-body-btn{
+      top: 100px;
+    }
+}
 
+  }
+  
   &.#{$prefix}-card-actions {
     width: 100%;
     height: 29px;
