--- a/packages/design/components/common.scss
+++ b/packages/design/components/common.scss
@@ -7,6 +7,7 @@ $prefix: 'PIVOT';
 body[pivot-theme='light'] {
   --Gray-100: rgba(255, 255, 255, 0.87);
   --Gray-80: rgba(203, 203, 203, 1);
+  --Gray-5: rgba(0, 0, 0, 0.04);
   --Brand-1-100: rgba(75, 159, 121, 1);
   --Brand-1-75: rgba(75, 159, 121, 0.75);
   --Brand-1-50: rgba(75, 159, 121, 0.5);
@@ -21,4 +22,6 @@ body {
   --pivot-button-background-color: var(--Brand-1-100);
   --pivot-button-hover-background-color: var(--Brand-5);
   --pivot-button-disabled-background-color: var(--Gray-80);
+  --pivot-card-background-color: var(--Gray-5);
+
 }
