fix: [DraggableList]dragging style

--- a/packages/design/components/DraggableList/DraggableList.scss
+++ b/packages/design/components/DraggableList/DraggableList.scss
@@ -3,7 +3,7 @@
 .#{$prefix}-draggable-list {
   width: 100%;
 }
-.#{$prefix}-dragging {
+.__#{$prefix}_dragging {
   opacity: 0;
   visibility: hidden;
 }
