--- a/packages/design/components/Card/index.scss
+++ b/packages/design/components/Card/index.scss
@@ -1,65 +1,75 @@
 @import '../common.scss';
-
+root {
+}
 .#{$prefix}-card {
   display: flex;
-  flex-wrap:wrap;
-  align-content:flex-start;
- // background-color: rgba(0, 0, 0, 0.04);
- background-color:var(
- --card-background-color,
- var(--pivot-card-background-color)
-);
-  padding: 20px;
+  flex-wrap: wrap;
+  align-content: flex-start;
+  // background-color: rgba(0, 0, 0, 0.04);
+  background-color: var(--card-background-color, var(--pivot-card-background-color));
+  padding: 10px, 8px, 10px, 12px;
   margin: 12px;
-  &-borderadius{
-    border-radius:20px ;
+  &-borderadius {
+    border-radius: 20px;
   }
 
   .#{$prefix}-head {
     display: flex;
-    
+
     width: 100%;
     height: 33px;
- .#{$prefix}-head-wrapper {
-  position: relative;
-  width: 100%;
-  .#{$prefix}-head-title {
-    min-width: 26px;
-    height: 13px;
-    font-weight: 400;
-    font-size: 13px;
-    line-height: 13px;
-    text-align: left;
-    color: #000000;
-  }
+    .#{$prefix}-head-wrapper {
+      display: flex;
+      position: relative;
+      width: 100%;
+      .#{$prefix}-head-avatar {
+        width: 35px;
+        height: 35px;
+        border-radius: 50%;
+        overflow: hidden;
+        margin-right: 11px;
+        img {
+          position: relative;
+          left: 50%;
+          top: 50%;
+          transform: translate(-50%, -50%);
+        }
+      }
+      .#{$prefix}-head-title {
+        min-width: 26px;
+        height: 13px;
+        font-weight: 400;
+        font-size: 13px;
+        line-height: 13px;
+        text-align: left;
+        color: #000000;
+      }
 
-  .#{$prefix}-head-extra {
-    position: absolute;
-    padding: 5px, 8px, 5px, 5px;
-    font-size: 12px;
-    line-height: 18px;
-    text-align: right;
-    top: 0;
-    right: 0;
-    float: right;
-  }
+      .#{$prefix}-head-extra {
+        position: absolute;
+        padding: 5px, 8px, 5px, 5px;
+        font-size: 12px;
+        line-height: 18px;
+        text-align: right;
+        top: 0;
+        right: 0;
+        float: right;
+      }
 
-  .#{$prefix}-head-time {
-    margin-top: 3px;
-    width: 106px;
-    height: 17px;
-    font-size: 11px;
-    line-height: 17px;
-    text-align: left;
-    color: #cbcbcb;
-    vertical-align: center;
+      .#{$prefix}-head-time {
+        margin-top: 3px;
+        width: 106px;
+        height: 17px;
+        font-size: 11px;
+        line-height: 17px;
+        text-align: left;
+        color: #cbcbcb;
+        vertical-align: center;
+      }
+    }
   }
-}
-    
-  }
-  &-border{
-     border: 1px solid #cbcbcb;
-
+  &-border {
+    border: 1px solid #cbcbcb;
   }
   &-middle {
     width: 375px;
@@ -78,9 +88,9 @@
   }
 
   .#{$prefix}-card-body {
-    padding-top:5px ;
+    padding-top: 5px;
     display: flex;
-    flex-wrap:wrap;
+    flex-wrap: wrap;
     width: 100%;
     font-size: 14px;
     line-height: 21px;
@@ -88,66 +98,62 @@
     text-align: left;
     vertical-align: top;
     margin-bottom: 3px;
-   .#{$prefix}-card-body-content {
-     position: relative;
-     .#{$prefix}-card-body-text {
-       position: relative;
+    .#{$prefix}-card-body-content {
+      position: relative;
+      .#{$prefix}-card-body-text {
+        position: relative;
         text-overflow: ellipsis;
         text-align: justify;
-        display: -webkit-box;   
-       -webkit-line-clamp: 3;   
-        -webkit-box-orient: vertical;    
+        display: -webkit-box;
+        -webkit-line-clamp: var(--card-minLength, 3);
+        -webkit-box-orient: vertical;
         overflow: hidden;
 
-      //position: relative;
-      line-height: 1.5;
-      transition: .3s max-height;
-  
-    }
-     .#{$prefix}-card-body-btn {
-      position: absolute;
-      right: 0px;
-      top: 60px;
-      //position: relative;
-     //float: right;
-      clear: both;
-      margin-left: 20px;
-      font-size: 16px;
-      padding: 0 8px;
-      background: #3F51B5;
-      line-height: 24px;
-      border-radius: 4px;
-      color:  #fff;
-      cursor: pointer;
-      &:after{
-        content:'展开'
+        //position: relative;
+        line-height: 1.5;
+        transition: 0.3s max-height;
       }
-     
-    }
-     .#{$prefix}-card-body-exp{
-      display: none;
-    }
-    .#{$prefix}-card-body-exp:checked+ .#{$prefix}-card-body-text{
-      -webkit-line-clamp:6;
-    }
-    .#{$prefix}-card-body-exp:checked+.#{$prefix}-card-body-btn::after .#{$prefix}-card-body-text::after{
-      visibility: hidden;
-    }
-     .#{$prefix}-card-body-exp:checked+ .#{$prefix}-card-body-btn::before{
-      visibility: hidden;
-    }
-    .#{$prefix}-card-body-exp:checked+ .#{$prefix}-card-body-text+.#{$prefix}-card-body-btn::after{
-      content: '收起'
-     
-    }
-    
-    .#{$prefix}-card-body-exp:checked+ .#{$prefix}-card-body-text+.#{$prefix}-card-body-btn{
-      top: 100px;
-    }
-}
+      .#{$prefix}-card-body-btn {
+        position: absolute;
+        right: 0px;
+        top: 60px;
+        //position: relative;
+        //float: right;
+        clear: both;
+        margin-left: 20px;
+        font-size: 16px;
+        padding: 0 8px;
+        background: #3f51b5;
+        line-height: 24px;
+        border-radius: 4px;
+        color: #fff;
+        cursor: pointer;
+        &:after {
+          content: var(--card-expandText, '展开');
+        }
+      }
+      .#{$prefix}-card-body-exp {
+        display: none;
+      }
+      .#{$prefix}-card-body-exp:checked + .#{$prefix}-card-body-text {
+        -webkit-line-clamp: var(--card-maxLength, 6);
+      }
+      .#{$prefix}-card-body-exp:checked + .#{$prefix}-card-body-btn::after .#{$prefix}-card-body-text::after {
+        visibility: hidden;
+      }
+      .#{$prefix}-card-body-exp:checked + .#{$prefix}-card-body-btn::before {
+        visibility: hidden;
+      }
+      .#{$prefix}-card-body-exp:checked + .#{$prefix}-card-body-text + .#{$prefix}-card-body-btn::after {
+        content: var(--card-collapseText, '收起');
+      }
 
+      .#{$prefix}-card-body-exp:checked + .#{$prefix}-card-body-text + .#{$prefix}-card-body-btn {
+        top: 100px;
+      }
+    }
   }
-  
+
   &.#{$prefix}-card-actions {
     width: 100%;
     height: 29px;
