--- a/packages/design/components/Card/index.scss
+++ b/packages/design/components/Card/index.scss
@@ -1,15 +1,15 @@
 @import '../common.scss';
-$num1: var(--card-minLength, 3);
-$num2: var(--card-maxLength, 6);
+
 .#{$prefix}-card {
   position: relative;
   display: flex;
   flex-wrap: wrap;
   align-content: flex-start;
-  // background-color: rgba(0, 0, 0, 0.04);
+  padding: 10px;
+  padding-bottom: 32px;
+
+  padding-left: 10px;
   background-color: var(--card-background-color, var(--pivot-card-background-color));
-  //padding: 10px, 8px, 10px, 12px;
-  margin: 12px;
   &-borderadius {
     border-radius: 10px;
   }
@@ -18,7 +18,7 @@ $num2: var(--card-maxLength, 6);
     display: flex;
 
     width: 100%;
-    height: 33px;
+    min-height: 33px;
     .#{$prefix}-head-wrapper {
       display: flex;
       position: relative;
@@ -75,10 +75,6 @@ $num2: var(--card-maxLength, 6);
   &-middle {
     width: 375px;
     // height: 260px;
-    padding: 10px;
-    padding-bottom: 32px;
-
-    padding-left: 10px;
   }
 
   &-small {
@@ -116,6 +112,20 @@ $num2: var(--card-maxLength, 6);
         //position: relative;
         line-height: 1.5;
         transition: 0.3s max-height;
+      }
+      .#{$prefix}-card-body-grid {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+
+        div {
+          border: 1px solid #f9e8bd;
+          border-radius: 8px;
+          padding: 0 15px;
+          font-size: 14px;
+          margin: 10px;
+        }
       }
       .#{$prefix}-card-body-btn {
         //position: absolute;
