--- a/packages/design/components/common.scss
+++ b/packages/design/components/common.scss
@@ -1,20 +1,20 @@
-$prefix: "PIVOT";
+$prefix: 'PIVOT';
 * {
   padding: 0;
   margin: 0;
   border: none;
 }
-body[pivot-theme="light"] {
+body[pivot-theme='light'] {
   --Gray-100: rgba(255, 255, 255, 0.87);
   --Gray-80: rgba(203, 203, 203, 1);
-  --Gray-5: rgba(0, 0, 0, 0.04);
+  --Gray-5: rgba(255, 255, 255, 0.87);
   --Brand-1-100: rgba(75, 159, 121, 1);
   --Brand-1-75: rgba(75, 159, 121, 0.75);
   --Brand-1-50: rgba(75, 159, 121, 0.5);
   --Brand-1-25: rgba(75, 159, 121, 0.25);
   --Brand-5: #2d895f;
 }
-body[pivot-theme="dark"] {
+body[pivot-theme='dark'] {
 }
 
 body {
@@ -22,5 +22,4 @@ body {
   --pivot-button-hover-background-color: var(--Brand-5);
   --pivot-button-disabled-background-color: var(--Gray-80);
   --pivot-card-background-color: var(--Gray-5);
-
 }
