--- a/packages/design/components/Card/index.scss
+++ b/packages/design/components/Card/index.scss
@@ -4,9 +4,9 @@
   position: relative;
   //解决兼容问题
   height: 100%;
-  height: -moz-available; /* WebKit-based browsers will ignore this. */
-  height: -webkit-fill-available; /* Mozilla-based browsers will ignore this. */
-  height: fill-available;
+  //height: -moz-available; /* WebKit-based browsers will ignore this. */
+  //height: -webkit-fill-available; /* Mozilla-based browsers will ignore this. */
+  //height: fill-available;
   display: flex;
   flex-wrap: wrap;
   align-content: flex-start;
@@ -83,13 +83,10 @@
 
   &-small {
     width: 316px;
-    //height: 130px;
   }
 
   .#{$prefix}-card-body {
     padding-top: 5px;
-    display: flex;
-    flex-wrap: wrap;
     width: 100%;
     font-size: 14px;
     line-height: 21px;
@@ -98,21 +95,28 @@
     vertical-align: top;
     margin-bottom: 3px;
     .#{$prefix}-card-body-content {
-      position: relative;
+      display: flex;
+      // width: 200px;
       .#{$prefix}-card-body-text {
-        position: relative;
-        text-overflow: ellipsis;
-        text-align: justify;
-        display: -webkit-box;
-        -webkit-line-clamp: var(--card-minLength, 3);
-        -webkit-box-orient: vertical;
         overflow: hidden;
-        height: 100%;
-        height: -moz-available; /* WebKit-based browsers will ignore this. */
-        height: -webkit-fill-available; /* Mozilla-based browsers will ignore this. */
-        height: fill-available;
-        line-height: 1.5;
-        transition: 0.3s max-height;
+        line-height: 20px;
+        max-height: 60px;
+        text-align: justify;
+        position: relative;
+        &::before {
+          content: '';
+          float: right;
+          width: 0;
+          height: 100%;
+          margin-bottom: -20px;
+          &::after {
+            content: '';
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            background: #fff;
+          }
+        }
       }
       .#{$prefix}-card-body-grid {
         display: flex;
@@ -130,16 +134,20 @@
       }
       .#{$prefix}-card-body-btn {
         float: right;
-
         clear: both;
+        height: 20px;
+        line-height: 18px;
         margin-left: 20px;
-        font-size: 14px;
-        padding: 0 8px;
-
-        line-height: 21px;
-        border-radius: 4px;
-        color: #2b98ba;
+        position: relative;
+        color: #025cdc;
         cursor: pointer;
+        &::before {
+          content: '...';
+          position: absolute;
+          left: -10px;
+          color: #333;
+          transform: translateX(-100%);
+        }
         &:after {
           content: var(--card-expandText, '展开');
         }
@@ -148,15 +156,15 @@
         display: none;
       }
       .#{$prefix}-card-body-exp:checked + .#{$prefix}-card-body-text {
-        -webkit-line-clamp: var(--card-maxLength, 6);
+        max-height: none;
       }
       .#{$prefix}-card-body-exp:checked + .#{$prefix}-card-body-btn::after .#{$prefix}-card-body-text::after {
         visibility: hidden;
       }
-      .#{$prefix}-card-body-exp:checked + .#{$prefix}-card-body-btn::before {
+      .#{$prefix}-card-body-exp:checked + .#{$prefix}-card-body-text .#{$prefix}-card-body-btn::before {
         visibility: hidden;
       }
-      .#{$prefix}-card-body-exp:checked + .#{$prefix}-card-body-text + .#{$prefix}-card-body-btn::after {
+      .#{$prefix}-card-body-exp:checked + .#{$prefix}-card-body-text .#{$prefix}-card-body-btn::after {
         content: var(--card-collapseText, '收起');
       }
     }
