--- a/packages/design/components/DraggableList/DraggableItem.scss
+++ b/packages/design/components/DraggableList/DraggableItem.scss
@@ -1,7 +1,17 @@
 @import '../common.scss';
 
 .#{$prefix}-draggable-item {
+  &.#{$prefix}-draggable-overlay {
+    box-shadow: 6px 7.3px 2.7px rgba(0, 0, 0, 0.016), 8.1px 9.8px 6.9px rgba(0, 0, 0, 0.018),
+      9.7px 11.8px 14.2px rgba(0, 0, 0, 0.019), 13.4px 16.4px 29.2px rgba(0, 0, 0, 0.02),
+      37px 45px 80px rgba(0, 0, 0, 0.02);
+  }
+
   margin: 8px 0;
   user-select: none;
   --webkit-user-select: none;
+}
+.__#{$prefix}_dragging {
+  opacity: 0;
+  visibility: hidden;
 }
