--- a/packages/demo/index.scss
+++ b/packages/demo/index.scss
@@ -57,11 +57,10 @@ html,
   color: #000;
   font-size: 18px;
 }
-.demo-list-item {
-  width: 100%;
+.demo-draggable-item {
   color: #fff;
   background-color: #3685f5;
-  padding: 10px 4px;
+  padding: 8px 18px;
   border-radius: 4px;
 }
 
