--- a/packages/design/components/DraggableList/DraggableItem.scss
+++ b/packages/design/components/DraggableList/DraggableItem.scss
@@ -1,6 +1,9 @@
 @import '../common.scss';
 
 .#{$prefix}-draggable-item {
+  position: relative;
+  top: 0;
+  left: 0;
   &.#{$prefix}-draggable-overlay {
     box-shadow: 6px 7.3px 2.7px rgba(0, 0, 0, 0.016), 8.1px 9.8px 6.9px rgba(0, 0, 0, 0.018),
       9.7px 11.8px 14.2px rgba(0, 0, 0, 0.019), 13.4px 16.4px 29.2px rgba(0, 0, 0, 0.02),
