--- a/packages/design/components/Draggable/presets/Sortable.scss
+++ b/packages/design/components/Draggable/presets/Sortable.scss
@@ -1,6 +1,7 @@
-@import '../common.scss';
+@import '../../common.scss';
 
 .#{$prefix}-sortable-wrap {
   display: flex;
+  flex: 1;
   flex-direction: column;
 }
