--- a/packages/design/components/Skeleton/index.scss
+++ b/packages/design/components/Skeleton/index.scss
@@ -4,17 +4,18 @@
   height: 100%;
   display: flex;
   justify-content: center;
-  margin-top: 20vh;
-  li {
-    background-image: linear-gradient(90deg, #f2f2f2 25%, #e6e6e6 37%, #f2f2f2 63%);
-    width: 100%;
-    height: 0.6rem;
-    list-style: none;
-    background-size: 400% 100%;
-    margin-top: 0.6rem;
-    background-position: 100% 50%;
-    animation: skeleton-loading 1.4s ease infinite;
-  }
+  // margin-top: 20vh;
+}
+li {
+  background-image: linear-gradient(90deg, #f2f2f2 25%, #e6e6e6 37%, #f2f2f2 63%);
+  width: 100%;
+  min-width: 100px;
+  height: 0.6rem;
+  list-style: none;
+  background-size: 400% 100%;
+  margin-top: 0.6rem;
+  background-position: 100% 50%;
+  animation: skeleton-loading 1.4s ease infinite;
 }
 @keyframes skeleton-loading {
   0% {
