feat: 完成按钮的功能补充和模块拆分，完成初步loader自动导入

--- a/packages/demo/index.scss
+++ b/packages/demo/index.scss
@@ -133,8 +133,9 @@ h3 {
     border-bottom: 1px solid rgba(5, 5, 5, 0.06);
     flex-wrap: wrap;
     justify-content: flex-start;
-    > :not(.PIVOT-draggable-item) {
-      margin: 0 24px;
-    }
+    align-items: center;
+    // > :not(.PIVOT-draggable-item) {
+    //   margin: 0 24px;
+    // }
   }
 }
