--- a/packages/demo/index.scss
+++ b/packages/demo/index.scss
@@ -102,6 +102,9 @@ h3 {
   padding: 8px 18px;
   border-radius: 4px;
 }
+.demo-sortable-horizen {
+  padding: 8px 88px;
+}
 
 .pivot-code-box {
   position: relative;
