feat: sortable with grid

--- a/packages/design/components/Draggable/presets/Sortable.scss
+++ b/packages/design/components/Draggable/presets/Sortable.scss
@@ -2,13 +2,17 @@
 
 .#{$prefix}-sortable-wrap {
   display: flex;
-  flex: 1;
-
+  width: 100%;
   &.__#{$prefix}-sortable-vertical {
     flex-direction: column;
   }
 
   &.__#{$prefix}-sortable-horizen {
     justify-content: space-around;
+  }
+
+  &.__#{$prefix}-sortable-grid {
+    width: 500px;
+    flex-wrap: wrap;
   }
 }
