--- a/packages/demo/index.scss
+++ b/packages/demo/index.scss
@@ -105,6 +105,10 @@ h3 {
 .demo-sortable-horizen {
   padding: 8px 88px;
 }
+.demo-sortable-grid {
+  padding: 32px 40px;
+  margin: 24px;
+}
 
 .pivot-code-box {
   position: relative;
@@ -135,7 +139,7 @@ h3 {
     display: flex;
     border-bottom: 1px solid rgba(5, 5, 5, 0.06);
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     > :not(.PIVOT-draggable-item) {
       margin: 0 24px;
