--- a/packages/design/components/Card/index.scss
+++ b/packages/design/components/Card/index.scss
@@ -1,5 +1,6 @@
 @import '../common.scss';
-
+$cardmin: calc(var(--card-minLength, 3) * 20px);
+$cardmax: calc(var(--card-maxLength, 100%) * 20px);
 .#{$prefix}-card {
   position: relative;
   //解决兼容问题
@@ -10,6 +11,7 @@
   display: flex;
   flex-wrap: wrap;
   align-content: flex-start;
+  margin: 0;
   padding: 10px;
   padding-left: 23px;
   padding-right: 24px;
@@ -100,7 +102,7 @@
       .#{$prefix}-card-body-text {
         overflow: hidden;
         line-height: 20px;
-        max-height: 60px;
+        max-height: $cardmin;
         text-align: justify;
         position: relative;
         &::before {
@@ -156,7 +158,7 @@
         display: none;
       }
       .#{$prefix}-card-body-exp:checked + .#{$prefix}-card-body-text {
-        max-height: none;
+        max-height: $cardmax;
       }
       .#{$prefix}-card-body-exp:checked + .#{$prefix}-card-body-btn::after .#{$prefix}-card-body-text::after {
         visibility: hidden;
