--- a/packages/design/components/Skeleton/index.scss
+++ b/packages/design/components/Skeleton/index.scss
@@ -25,6 +25,19 @@
     //width: 250px;
     //width: 250px;
   }
+  .#{$prefix}-skeleton-avatar {
+    overflow: hidden;
+    border-radius: 50%;
+    background-image: linear-gradient(90deg, #f2f2f2 25%, #e6e6e6 37%, #f2f2f2 63%);
+    width: 100%;
+    min-width: 100px;
+    height: 0.6rem;
+    list-style: none;
+    background-size: 400% 100%;
+    margin-top: 0.6rem;
+    background-position: 100% 50%;
+    animation: skeleton-loading 1.4s ease infinite;
+  }
 }
 li {
   background-image: linear-gradient(90deg, #f2f2f2 25%, #e6e6e6 37%, #f2f2f2 63%);
@@ -36,7 +49,14 @@ li {
   margin-top: 0.6rem;
   background-position: 100% 50%;
   animation: skeleton-loading 1.4s ease infinite;
+  &:first-child {
+    width: 40%;
+  }
+  &:nth-child(2) {
+    width: 70%;
+  }
 }
+
 @keyframes skeleton-loading {
   0% {
     background-position: 100% 50%;
