--- a/packages/demo/index.scss
+++ b/packages/demo/index.scss
@@ -145,4 +145,11 @@ h3 {
       margin: 0 24px;
     }
   }
+  .line-numbers {
+    //width: 100%;
+    .code-toolbar {
+      width: 76vw;
+      overflow: auto;
+    }
+  }
 }
