--- a/packages/design/components/Skeleton/index.scss
+++ b/packages/design/components/Skeleton/index.scss
@@ -33,7 +33,7 @@ li {
   list-style: none;
   display: block;
   width: 100%;
-  height: 0.6rem;
+  height: calc(var(--skeleton-paragraph-size, 0.8) * 1rem);
   &:first-child {
     width: 40%;
   }
