--- a/packages/design/components/Skeleton/index.scss
+++ b/packages/design/components/Skeleton/index.scss
@@ -1,7 +1,5 @@
 @import '../common.scss';
 .#{$prefix}-skeleton {
-  //position: absolute;
-  //display: block;
   width: 100%;
   height: 100%;
   border-radius: 10px;
@@ -16,9 +14,8 @@
     .#{$prefix}-skeleton-head {
       .#{$prefix}-skeleton-title {
         margin: 0 auto;
-        width: 40%;
-        min-width: 80px;
-        height: 1rem;
+        width: calc(var(--skeleton-title-width, 40%) * 100%);
+        height: calc(var(--skeleton-title-height, 1) * 1rem);
       }
     }
   }
@@ -35,10 +32,10 @@ li {
   width: 100%;
   height: calc(var(--skeleton-paragraph-size, 0.8) * 1rem);
   &:first-child {
-    width: 40%;
+    width: 30%;
   }
   &:nth-child(2) {
-    width: 70%;
+    width: 60%;
   }
 }
 .#{$prefix}-skeleton-loading {
@@ -47,9 +44,10 @@ li {
   background-size: 400% 100%;
   margin-top: 0.6rem;
   background-position: 100% 50%;
-  animation: skeleton-loading 1.4s ease infinite;
+
+  animation: var(--skeleton-active, active) 1.4s ease infinite;
 }
-@keyframes skeleton-loading {
+@keyframes active {
   0% {
     background-position: 100% 50%;
   }
