fix code width and style width not same

--- a/packages/demo/index.scss
+++ b/packages/demo/index.scss
@@ -145,18 +145,15 @@ h3 {
       margin: 0 24px;
     }
   }
+
   .line-numbers {
     //width: 100%;
     .code-toolbar {
-      width: 76vw;
-      overflow: auto;
-    }
-  }
-  .line-numbers {
-    //width: 100%;
-    .code-toolbar {
-      width: 76vw;
-      overflow: auto;
+      .data-prismjs-copy {
+        width: 70vw;
+        //width: 100%;
+        overflow: auto;
+      }
     }
   }
 }
