--- a/packages/design/components/Skeleton/index.scss
+++ b/packages/design/components/Skeleton/index.scss
@@ -3,7 +3,7 @@
   width: 100%;
   height: 100%;
   border-radius: 10px;
-  display: inline-flex;
+  display: flex;
   justify-content: center;
   flex-wrap: unwrap;
 
