fix:variable name

--- a/packages/demo/index.scss
+++ b/packages/demo/index.scss
@@ -150,7 +150,7 @@ h3 {
     //width: 100%;
     .code-toolbar {
       .data-prismjs-copy {
-        width: 70vw;
+        //width: 70vw;
         //width: 100%;
         overflow: auto;
       }
