refactor: :hammer:basic&single container sortable

--- a/packages/design/components/Draggable/Sortable/SortableItem.scss
+++ b/packages/design/components/Draggable/Sortable/SortableItem.scss
@@ -1,6 +1,6 @@
-@import '../../../common.scss';
+@import '../../common.scss';
 
-.#{$prefix}-draggable-item {
+.#{$prefix}-sortable-item {
   position: relative;
   top: 0;
   left: 0;
