--- a/packages/design/components/Draggable/components/Handle/Handle.scss
+++ b/packages/design/components/Draggable/components/Handle/Handle.scss
@@ -10,4 +10,8 @@
   &:hover {
     background-color: rgba(0, 0, 0, 0.05);
   }
+  &.__PIVOT_dragging {
+    cursor: grabbing;
+    cursor: -webkit-grabbing;
+  }
 }
